--- a/package.json
+++ b/package.json
@@ -36,20 +36,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
     "eslint-config-universe": "^11.0.0",
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
+    "npm": "^8.15.1",
     "prettier": "^2.7.1",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
   "eslintConfig": {
     "extends": "universe/native"
+  },
+  "expo": {
+    "entryPoint": "./src/App.tsx"
   },
   "private": true
 }
