--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@redux-devtools/core": "^3.13.1",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
