--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-universe": "^11.0.0",
     "jest": "^26.6.3",
     "jest-expo": "~45.0.0",
@@ -50,9 +51,6 @@
     "prettier": "^2.7.1",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
-  },
-  "eslintConfig": {
-    "extends": "universe/native"
   },
   "expo": {
     "entryPoint": "./src/App.tsx"
