--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
   "expo": {
     "entryPoint": "./src/App.tsx"
   },
